--- a/src/app/components/production-budget/production-budget.component.html
+++ b/src/app/components/production-budget/production-budget.component.html
@@ -1,8 +1,9 @@
 <!--<div class="container">-->
 <!--  <div class="card">-->
 <!--    <div class="card-body">-->
+<!--      <br>-->
 <!--      <div class="row">-->
-<!--        <div class="col-md-12">-->
+<!--        <div class="col-md-12 table-wrapper-scroll-y my-custom-scrollbar">-->
           <table class="table table-bordered table-responsive table-condensed table-striped table-hover data-page-length='10'">
             <thead>
             <tr>
