--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <router-outlet></router-outlet>
 <app-well></app-well>
 <app-field></app-field>
-
+<app-production-general-info></app-production-general-info>
