--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,4 @@
 <app-well></app-well>
 <app-field></app-field>
 <app-production-general-info></app-production-general-info>
+<app-drilling-info></app-drilling-info>
