--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
+<!-- <app-lab-measurement></app-lab-measurement> -->
+<app-daily-actions></app-daily-actions>
