--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -1,21 +1,44 @@
-<div class="text-center border border-light p-5">
+
+<div class="text-center alert alert-warning" *ngIf="message!=''" >{{message}}</div>
+
+<form class="text-center border border-light p-5"  (ngSubmit)="!registrationForm.invalid && register()" #registrationForm="ngForm">
     
-      <input  type="text" class="form-control"  placeholder="First name" [(ngModel)]="userRequest.firstName">
+      <input  type="text" class="form-control" required="required" placeholder="First name" name="firstName" #firstName="ngModel"  [(ngModel)]="userRequest.firstName">
+      <div class="alert alert-warning" *ngIf="firstName.dirty && firstName.invalid">First name is required</div>
+
       <br>    
-      <input type="text" class="form-control" placeholder="Last name" [(ngModel)]="userRequest.lastName">
+      <input type="text" class="form-control"required="required" placeholder="Last name" name="lastName" #lastName="ngModel"  [(ngModel)]="userRequest.lastName">
+      <div class="alert alert-warning" *ngIf="lastName.dirty && lastName.invalid">Last name is required</div>
+
       <br>
-      <input type="email" class="form-control"  placeholder="Email" [(ngModel)]="userRequest.email">
+      <input type="email" class="form-control"   pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$" placeholder="Email"  name="email"  #email="ngModel" [(ngModel)]="userRequest.email">
+      <div class="alert alert-warning" *ngIf="email.dirty && email.invalid">Email is not valid</div>
+   
       <br>
-      <input type="password" class="form-control"  placeholder="Password" [(ngModel)]="userRequest.password">
+      <input type="password" class="form-control"  required="required" minlength="6" placeholder="Password" name="password"  #password="ngModel"  [(ngModel)]="userRequest.password">
+      <div class="alert alert-warning" *ngIf="password.dirty && password.invalid">Enter atleast 6 characters</div>
+
       <br>
-      <input type="text" class="form-control" placeholder="Phone number" [(ngModel)]="userRequest.phoneNumber">
+      <input type="text" class="form-control" required="required" pattern="^(011|015|012|010)[0-9]{8}" placeholder="Phone number" name="phoneNumber"  #phoneNumber="ngModel" [(ngModel)]="userRequest.phoneNumber">
+      <div class="alert alert-warning" *ngIf="phoneNumber.dirty && phoneNumber.invalid">Phone number is not valid</div>
+
       <br>
-      job title
-      <input type="text" class="form-control" placeholder="Job title" [(ngModel)]="userRequest.jobTitle">
-      <br>
+      <label>Job title</label>
       <div class="dropdown">
         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Job location
+          {{jobTitles[userRequest.jobTitle-1]}}
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <a class="dropdown-item" (click)="setJobTitle(1)">A</a>
+          <a class="dropdown-item" (click)="setJobTitle(2)">B</a>
+          <a class="dropdown-item" (click)="setJobTitle(3)">C</a>
+        </div>
+      </div>
+      <br>
+      <label>Job Location</label>
+      <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          {{userRequest.jobLocation}}
         </button>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
           <a class="dropdown-item" (click)="setJobLocation('office')">office</a>
@@ -29,5 +52,5 @@
       
       <br>
       <br>
-    <button (click)=register() class="btn btn-primary">Sign Up</button>
-</div>
+    <button type="submit" class="btn btn-primary">Sign Up</button>
+    </form>
