Lab measurement insert update filteration

--- a/src/app/components/daily-actions/daily-actions.component.html
+++ b/src/app/components/daily-actions/daily-actions.component.html
@@ -99,7 +99,7 @@
                       <table class="table table-bordered table-hover">
                         <thead>
                           <tr>
-                            <th>Lab Id</th>
+                            <th>Report Id</th>
                             <th>Well Id</th>
                             <th>Date</th>
                             <th>DownTime</th>
