--- a/src/app/components/production-general-info/production-general-info.component.html
+++ b/src/app/components/production-general-info/production-general-info.component.html
@@ -49,8 +49,7 @@
               <td>{{pqi.powerSourceType}}</td>
               <td>{{pqi.powerSource}}</td>
               <td>{{pqi.processionPlant}}</td>
-<!--              <td><button type="button" class="btn btn-danger" (click)="deleteFromFlms(currentIndex)">Delete</button></td>-->
-<!--            -->
+              <td><button type="button" class="btn btn-danger" (click)="deleteFromPqi(currentIndex)">Delete</button></td>
             </tr>
             </tbody>
           </table>
