--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,12 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+@import 'https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css';
+@import 'https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css';
+/* You can add global styles to this file, and also import other style files */
 
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
