--- a/src/app/components/well-general-info/well-general-info.component.html
+++ b/src/app/components/well-general-info/well-general-info.component.html
@@ -31,7 +31,7 @@
                             <td>{{wellGeneralInfoResponse.xcord}}</td>
                             <td>{{wellGeneralInfoResponse.ycord}}</td>
                             <td>{{wellGeneralInfoResponse.lat}}</td>
-                            <td>{{wellGeneralInfoResponse.long_}}</td>
+                            <td>{{wellGeneralInfoResponse.longitude}}</td>
                             <td><button (click)="deleteWellGeneralInfo(wellGeneralInfoResponse.id)" class="btn btn-warning">Delete</button></td>
                         </tbody>
                       </table>
