--- a/src/styles.css
+++ b/src/styles.css
@@ -11,4 +11,4 @@ body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 /* You can add global styles to this file, and also import other style files */
-@import "~bootstrap/dist/css/bootstrap.min.css";
+/* @import "~bootstrap/dist/css/bootstrap.min.css"; */
