--- a/src/app/components/production-budget/production-budget.component.html
+++ b/src/app/components/production-budget/production-budget.component.html
@@ -4,6 +4,74 @@
 <!--      <br>-->
 <!--      <div class="row">-->
 <!--        <div class="col-md-12 table-wrapper-scroll-y my-custom-scrollbar">-->
+<div name ="addProductionBudgetData" class="modal fade">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <form>
+        <div class="modal-header">
+          <h4 class="modal-title">Add Employee</h4>
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        </div>
+        <div class="modal-body">
+          <div class="form-group">
+            <label>Name</label>
+            <input type="text" class="form-control" required>
+          </div>
+          <div class="form-group">
+            <label>Email</label>
+            <input type="email" class="form-control" required>
+          </div>
+          <div class="form-group">
+            <label>Address</label>
+            <textarea class="form-control" required></textarea>
+          </div>
+          <div class="form-group">
+            <label>Phone</label>
+            <input type="text" class="form-control" required>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
+          <input type="submit" class="btn btn-success" value="Add">
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">
+  Launch demo modal
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!--<div class="col-sm-6">-->
+<!--<a href="#addProductionBudgetData" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i>-->
+<!--  <span>Add New Employee</span>-->
+<!--</a>-->
+<!--</div>-->
+
+
+<button (click)="delete()" type="button" class="btn btn-danger">DELETE</button>
+<button  type="button" class="btn bg-primary">Update</button>
+<!--<button  (click)="" type="button" class="btn bg-primary">Add</button>-->
           <table class="table table-bordered table-responsive table-condensed table-striped table-hover data-page-length='10'">
             <thead>
             <tr>
@@ -25,7 +93,7 @@
             </tr>
             </thead>
             <tbody>
-            <tr *ngFor="let item of productionBudgetDataResponse; let currentIndex=index">
+            <tr *ngFor="let item of productionBudgetDataResponse; let currentIndex=index" (click)="ClickedRow(currentIndex)" [class.active]="currentIndex == HighlightRow">
               <td>{{currentIndex+1}}</td>
               <td>{{item.id}}</td>
               <td>{{item.productionDate}}</td>
@@ -40,9 +108,9 @@
               <td>{{item.agibaOil}}</td>
               <td>{{item.salesGas}}</td>
               <td>{{item.agibaBOE}}</td>
-              <td>
-                <button (click)="delete(currentIndex)" type="button" class="btn btn-danger">DELETE</button>
-              </td>
+<!--              <td>-->
+<!--                <button (click)="delete(currentIndex)" type="button" class="btn btn-danger">DELETE</button>-->
+<!--              </td>-->
             </tr>
             </tbody>
           </table>
