--- a/src/app/components/production-budget/production-budget.component.html
+++ b/src/app/components/production-budget/production-budget.component.html
@@ -1,119 +1,127 @@
-<!--<div class="container">-->
-<!--  <div class="card">-->
-<!--    <div class="card-body">-->
-<!--      <br>-->
-<!--      <div class="row">-->
-<!--        <div class="col-md-12 table-wrapper-scroll-y my-custom-scrollbar">-->
-<div name ="addProductionBudgetData" class="modal fade">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <form>
-        <div class="modal-header">
-          <h4 class="modal-title">Add Employee</h4>
-          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        </div>
-        <div class="modal-body">
-          <div class="form-group">
-            <label>Name</label>
-            <input type="text" class="form-control" required>
-          </div>
-          <div class="form-group">
-            <label>Email</label>
-            <input type="email" class="form-control" required>
-          </div>
-          <div class="form-group">
-            <label>Address</label>
-            <textarea class="form-control" required></textarea>
-          </div>
-          <div class="form-group">
-            <label>Phone</label>
-            <input type="text" class="form-control" required>
-          </div>
-        </div>
-        <div class="modal-footer">
-          <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-          <input type="submit" class="btn btn-success" value="Add">
-        </div>
-      </form>
-    </div>
-  </div>
-</div>
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">
-  Launch demo modal
-</button>
 
-<!-- Modal -->
-<div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+<button class="btn btn-primary" (click)="triggerModal(modalData)">insert</button>
+
+
+<ng-template #modalData let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Insert New Production Budget Record</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">×</span>
+    </button>
+  </div>
+  <div class="container">
+    <div class="card">
+      <div class="card-body">
+        <br/>
+        <div>
+          <form >
+            <div>
+              <label>Production Date</label>
+              <input  type="datetime" [(ngModel)]="productionBudgetDataInsert.productionDate" class="form-control" required>
+            </div>
+            <br>
+            <div>
+              <label>Meleiha</label>
+              <input type="number" [(ngModel)]="productionBudgetDataInsert.meleiha" class="form-control" required>
+<!--              <small *ngIf="!productionBudgetDataInsert.meleiha" class="form-text text-danger">Please EnterData</small>-->
+            </div>
+            <br>
+            <div>
+              <label>Aghar</label>
+              <input type="number" [(ngModel)]="productionBudgetDataInsert.aghar" class="form-control" required>
+            </div>
+            <div>
+              <label>EastKanays</label>
+              <input type="number" [(ngModel)]="productionBudgetDataInsert.eastKanays" class="form-control" required>
+            </div>
+            <div>
+              <label>Zarif</label>
+              <input type="number" [(ngModel)]="productionBudgetDataInsert.zarif" class="form-control" required>
+            </div>
+            <div>
+              <label>Faras</label>
+              <input type="number" [(ngModel)]="productionBudgetDataInsert.faras" class="form-control" required>
+            </div>
+            <div>
+              <label>Raml</label>
+              <input type="number" [(ngModel)]="productionBudgetDataInsert.raml" class="form-control" required>
+            </div>
+            <div>
+              <label>WesternDesert</label>
+              <input type="number" [(ngModel)]="productionBudgetDataInsert.westernDesert" class="form-control" required>
+            </div>
+            <div>
+              <label>Ashrafi</label>
+              <input type="number" [(ngModel)]="productionBudgetDataInsert.ashrafi" class="form-control" required>
+            </div>
+            <div>
+              <label>AgibaOil</label>
+              <input type="number" [(ngModel)]="productionBudgetDataInsert.agibaOil" class="form-control" required>
+            </div>
+            <div>
+              <label>SalesGas</label>
+              <input type="number" [(ngModel)]="productionBudgetDataInsert.salesGas" class="form-control" required>
+            </div>
+            <div>
+              <label>AgibaBOE</label>
+              <input type="number" [(ngModel)]="productionBudgetDataInsert.agibaBOE" class="form-control" required>
+            </div>
+
+           <button type="submit" class="btn bg-primary" (click)="insert()">Add</button>
+          </form>
+        </div>
       </div>
     </div>
   </div>
-</div>
-<!--<div class="col-sm-6">-->
-<!--<a href="#addProductionBudgetData" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i>-->
-<!--  <span>Add New Employee</span>-->
-<!--</a>-->
-<!--</div>-->
+</ng-template>
 
 
 <button (click)="delete()" type="button" class="btn btn-danger">DELETE</button>
-<button  type="button" class="btn bg-primary">Update</button>
+<button type="button" class="btn bg-primary">Update</button>
 <!--<button  (click)="" type="button" class="btn bg-primary">Add</button>-->
-          <table class="table table-bordered table-responsive table-condensed table-striped table-hover data-page-length='10'">
-            <thead>
-            <tr>
-              <th>#</th>
-              <th>Id</th>
-              <th>Production Date</th>
-              <th>Meleiha</th>
-              <th>Aghar</th>
-              <th>East Kanays</th>
-              <th>Zarif</th>
-              <th>Faras</th>
-              <th>Raml</th>
-              <th>Western Desert</th>
-              <th>Ashrafi</th>
-              <th>Agiba Oil</th>
-              <th>Sales Gas</th>
-              <th>Agiba Boe</th>
+<table class="table table-bordered table-responsive table-condensed table-hover data-page-length='10'">
+  <thead>
+  <tr>
+    <th>#</th>
+    <th>Id</th>
+    <th>Production Date</th>
+    <th>Meleiha</th>
+    <th>Aghar</th>
+    <th>East Kanays</th>
+    <th>Zarif</th>
+    <th>Faras</th>
+    <th>Raml</th>
+    <th>Western Desert</th>
+    <th>Ashrafi</th>
+    <th>Agiba Oil</th>
+    <th>Sales Gas</th>
+    <th>Agiba Boe</th>
 
-            </tr>
-            </thead>
-            <tbody>
-            <tr *ngFor="let item of productionBudgetDataResponse; let currentIndex=index" (click)="ClickedRow(currentIndex)" [class.active]="currentIndex == HighlightRow">
-              <td>{{currentIndex+1}}</td>
-              <td>{{item.id}}</td>
-              <td>{{item.productionDate}}</td>
-              <td>{{item.meleiha}}</td>
-              <td>{{item.aghar}}</td>
-              <td>{{item.eastKanays}}</td>
-              <td>{{item.zarif}}</td>
-              <td>{{item.faras}}</td>
-              <td>{{item.raml}}</td>
-              <td>{{item.westernDesert}}</td>
-              <td>{{item.ashrafi}}</td>
-              <td>{{item.agibaOil}}</td>
-              <td>{{item.salesGas}}</td>
-              <td>{{item.agibaBOE}}</td>
-<!--              <td>-->
-<!--                <button (click)="delete(currentIndex)" type="button" class="btn btn-danger">DELETE</button>-->
-<!--              </td>-->
-            </tr>
-            </tbody>
-          </table>
+  </tr>
+  </thead>
+  <tbody>
+  <tr *ngFor="let item of productionBudgetDataResponse; let currentIndex=index" (click)="ClickedRow(currentIndex)"
+      [class.active]="currentIndex == HighlightRow">
+    <td>{{currentIndex + 1}}</td>
+    <td>{{item.id}}</td>
+    <td>{{item.productionDate}}</td>
+    <td>{{item.meleiha}}</td>
+    <td>{{item.aghar}}</td>
+    <td>{{item.eastKanays}}</td>
+    <td>{{item.zarif}}</td>
+    <td>{{item.faras}}</td>
+    <td>{{item.raml}}</td>
+    <td>{{item.westernDesert}}</td>
+    <td>{{item.ashrafi}}</td>
+    <td>{{item.agibaOil}}</td>
+    <td>{{item.salesGas}}</td>
+    <td>{{item.agibaBOE}}</td>
+    <!--              <td>-->
+    <!--                <button (click)="delete(currentIndex)" type="button" class="btn btn-danger">DELETE</button>-->
+    <!--              </td>-->
+  </tr>
+  </tbody>
+</table>
 <!--        </div>-->
 <!--      </div>-->
 <!--    </div>-->
